DB 찐찐 수정